# ChangeLog for x11-libs/libxcb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.47 2009/12/04 21:18:36 remi Exp $

  04 Dec 2009; Rémi Cardona <remi@gentoo.org> libxcb-1.5.ebuild:
  up dep on xcb-proto (fixes bug #295692)

*libxcb-1.5 (04 Dec 2009)

  04 Dec 2009; Rémi Cardona <remi@gentoo.org> +libxcb-1.5.ebuild:
  bump to 1.5

  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> libxcb-1.4-r1.ebuild:
  Stable for HPPA (bug #282290).

  11 Oct 2009; nixnut <nixnut@gentoo.org> libxcb-1.4-r1.ebuild:
  ppc stable #282290

  09 Oct 2009; Markus Meier <maekke@gentoo.org> libxcb-1.4-r1.ebuild:
  arm stable, bug #282290

  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> libxcb-1.4-r1.ebuild:
  x86 stable, bug 282290

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> libxcb-1.4-r1.ebuild:
  amd64 stable wrt #282290

  28 Sep 2009; Rémi Cardona <remi@gentoo.org> files/xcb-rebuilder.sh:
  add upgrade guide URL at the end of xcb-rebuilder.sh

  17 Sep 2009; Rémi Cardona <remi@gentoo.org> libxcb-1.4-r1.ebuild:
  remove the call to preserve_old_lib_notify, it's confusing

  17 Sep 2009; Rémi Cardona <remi@gentoo.org> -libxcb-1.4.ebuild:
  drop old ebuilds

*libxcb-1.4-r1 (14 Sep 2009)

  14 Sep 2009; Rémi Cardona <remi@gentoo.org> +libxcb-1.4-r1.ebuild:
  respect ${ROOT}, fixes bug #284950

  11 Sep 2009; Rémi Cardona <remi@gentoo.org> libxcb-1.4.ebuild:
  add preserve_old_lib to libxcb 1.4 and add a link to a proper upgrade
  guide

  11 Sep 2009; Rémi Cardona <remi@gentoo.org> -libxcb-1.3.ebuild:
  drop old ebuilds

  18 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> libxcb-1.4.ebuild:
  Fix unrecognized options: --disable-xselinux.

  18 Aug 2009; Rémi Cardona <remi@gentoo.org> files/xcb-rebuilder.sh:
  don't try to rebuild broken packages, just list them

*libxcb-1.4 (06 Aug 2009)

  06 Aug 2009; Rémi Cardona <remi@gentoo.org> +libxcb-1.4.ebuild:
  bump to 1.4
