@@ -1,11 +1,9 @@
 AUX xcb-rebuilder.sh 1511 RMD160 81acde214faf7b4ed00a378c36ec5c43f19f3bc7 SHA1 7d2ef15c2449cb4c72d89059e063ce8ae228d014 SHA256 37910aacdcd793a22af2eea07741bbdde8c62096c67ab7530e72424fadd14bc7
-DIST libxcb-1.1.90.1.tar.bz2 475250 RMD160 3e0639b4348fb8041b970d64ef28f23080c29884 SHA1 5d34433f5cb7febac9b3713c1549f53357fdeef7 SHA256 7ccd862a295562412e9fe75cb83cc593db5c88d162b3ce1f7a326dd116381e88
 DIST libxcb-1.1.tar.bz2 442755 RMD160 1c8c1d83ec71f7d1906373a679906615d9440f01 SHA1 b27c7eb86fd2ea43cea83cadcf20cc77abf5defe SHA256 338b9cb7886b49a5674881cd929def07449e47ffcc1886f4363359883c82d93f
 DIST libxcb-1.4.tar.bz2 306116 RMD160 c8ce1e1670c09ded64c9a1642c8ed26403ef9986 SHA1 fb3bc1a81058e1894663771f87b8a3919f8520ce SHA256 07b6e2d3dde4beb06dc8310daec1c5c82d67022e3c9aec35f3783e63aad3209e
 DIST libxcb-1.5.tar.bz2 333760 RMD160 ef50acaf3961ab6b988b97eac3b30ce940b0668a SHA1 87b32a2de342e4c2991c8feed15bdd0602840832 SHA256 3bf062e4ae585610c3e45b6ffe3035edf8b535b0e34f08068f0532a3d4381133
-EBUILD libxcb-1.1.90.1.ebuild 1222 RMD160 acc8d9aa6859f6b605ea3fd0155f8c2659a3d5dd SHA1 38998e4c10c1f39ef78e2ae4e32023248ea0dccb SHA256 2f5ddb524be3befd6ee695e7adb2f660ea30d9626855e70075522f38bbf70672
 EBUILD libxcb-1.1.ebuild 1147 RMD160 efca7c88a3e35f13d236823c2477536111956023 SHA1 43023cd2b6e12302df7aef86464d46c27aa53826 SHA256 f6a7d4d2debab171d46576b23573915a59dce4f7d8547f45e4e779448f32a890
 EBUILD libxcb-1.4-r1.ebuild 1679 RMD160 d8cf4765e8eea2a0d3870cb03ff3e4687fed1e8e SHA1 26efd99a0850c8518aae209f3b8ad6ca4c942707 SHA256 cbd8f0294898a899313bc14609e09ab9f9d1c4aef967e07b95a4dc010fa61144
 EBUILD libxcb-1.5.ebuild 882 RMD160 82e4c9cf02183185d5b52fe0c047f5f303a0835a SHA1 308671e2c63e79d1f76df7466bd6f8c3ec22cbd9 SHA256 733199cab5a4a6891bc137d169586f6de35f32565ca66822532eb432c280ce68
-MISC ChangeLog 5850 RMD160 df6eebd83b3321d68161f23a5f381bd485aad7e6 SHA1 0908afcaf47a2e7109e7d99429b4c754078ad979 SHA256 b6cf7af9a08624111ca6faded1a9cadc4012a4455404dd8848f87a8e95ee007a
+MISC ChangeLog 5943 RMD160 8754756723a4bc1349bf53207123f776dc48b9e5 SHA1 9e423aef3e7f795869f5242f2bba6bd197d659a4 SHA256 116b25d42c61e1debd0f3910a3575a34556bf3846e39edb2ceaa3b8099a87540
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
